--- a/app/src/main/res/layout/fragment_offset_screen.xml
+++ b/app/src/main/res/layout/fragment_offset_screen.xml
@@ -3,13 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OffsetScreen">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FFFFFF" />
+    tools:context=".fragments.OffsetScreen">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/offsetListRecyclerView"
