--- a/app/src/main/res/layout/fragment_stats_screen.xml
+++ b/app/src/main/res/layout/fragment_stats_screen.xml
@@ -3,12 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StatsScreen">
+    tools:context=".fragments.StatsScreen">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/transactionListRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FFFFFF" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
