--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:innerRadius="128dp"
-    android:shape="ring"
-    android:thicknessRatio="32"
-    android:useLevel="false">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/background">
 
-    <solid android:color="#444444" />
-</shape>
+        <shape android:shape="ring"
+            android:useLevel="false"
+            android:thicknessRatio="20"
+            >
+
+            <solid android:color="@android:color/darker_gray"/>
+
+        </shape>
+    </item>
+
+    <item android:id="@android:id/progress">
+        <rotate android:fromDegrees="270"
+            android:toDegrees="270">
+
+            <shape android:shape="ring"
+                android:thicknessRatio="20">
+
+                <solid android:color="@color/black"/>
+
+            </shape>
+        </rotate>
+    </item>
+</layer-list>
