--- a/app/src/main/res/layout/transaction_list_item.xml
+++ b/app/src/main/res/layout/transaction_list_item.xml
@@ -11,11 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
         android:text="Vendor"
         android:textSize="16sp"
-        app:layout_constraintRight_toLeftOf="@id/editTransactionButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/transactionTimestampLabel"
+        app:layout_constraintBottom_toTopOf="@id/transactionPriceLabel" />
 
     <TextView
         android:id="@+id/transactionTimestampLabel"
@@ -24,7 +25,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:text="Date"
-        app:layout_constraintBottom_toTopOf="@id/transactionPriceLabel"
+        app:layout_constraintTop_toBottomOf="@id/transactionTimestampLabel"
+        app:layout_constraintBottom_toTopOf="@id/transactionVendorLabel"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,7 +39,7 @@
         android:layout_marginBottom="16dp"
         android:text="@string/sample_price"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/transactionTimestampLabel"
+        app:layout_constraintTop_toBottomOf="@id/transactionVendorLabel"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageButton
