--- a/app/src/main/res/layout/fragment_offset_amount.xml
+++ b/app/src/main/res/layout/fragment_offset_amount.xml
@@ -24,4 +24,9 @@
         android:layout_gravity="center"
         android:text="Confirm"
         android:textAllCaps="false"/>
+
+    <TextView
+        android:id="@+id/responseMessageText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
